# prueba-lider-tecnico

./: .gitignore  README.md  pyproject.toml  script.sh
app/: config.py  database.py  main.py  seed.py
app/dependencies/: auth.py
app/models/: reservation.py  reservation_pool.py  room.py  staff.py  table.py
app/routers/: auth.py  healthcheck.py  optimizer.py  reservation.py  reservation_pool.py  room.py  router.py  staff.py  table.py
app/schemas/: reservation.py  reservation_pool.py  room.py  staff.py  table.py  token.py
app/services/: healthcheck_service.py  reservation_pool_service.py  reservation_service.py  room_service.py  staff_service.py  table_service.py
app/utils/: auth.py  email.py  optimizer.py
docker/: Dockerfile  docker-compose.dev.yml
